@@ -28,6 +28,7 @@ $engine = array(
 	'name' => 'default', 	// template directory
 	'engine' => 'default', 	// engine.php directory
 				// you can use other engine
+	'type' => DOC_CONTRACT,			// it's also possible to use array of document types in this field
 	'template' => 'template.html', 		// template file (in 'name' dir)
 	'title' => trans('Default document'), 	// description for UI
 	'content_type' => 'text/html', 		// output file type
