@@ -1,0 +1,4 @@
+<OPTION value="">... {trans("select template")} ...</OPTION>
+{foreach $docengines as $docengine}
+<OPTION value="{$docengine.name}">{$docengine.title}</OPTION>
+{/foreach}
